# study-crew-v2

./: .env.example  .gitignore  README.md  pyproject.toml  report.md  summary.md
db/: chroma.sqlite3
src/study_crew_v2/: crew.py  main.py  test_extract_tool.py  test_llm.py
src/study_crew_v2/config/: agents.yaml  llm_loader.py  tasks.yaml
src/study_crew_v2/tools/: __init__.py  extraction_tool.py
